# vincent

./: .appveyor.yml  .clang-format  .gitcommitstyle.txt  .travis.yml  CMakeLists.txt  Doxyfile  README.md  REST_API.md  metting.md  notes.json  overview.md  plan.md  sql_table_design.html  tables.md  view.md  vincent.sql  数据库设计.docx
docs/html/: adpc__string_8h_source.html  annotated.html  classCommandFactory-members.html  classCommandFactory.html  classCommandFactory__coll__graph.map  classCommandFactory__coll__graph.md5  classICommand-members.html  classICommand.html  classICommand__inherit__graph.map  classICommand__inherit__graph.md5  classLogCommand-members.html  classLogCommand.html  classLogCommand__coll__graph.map  classLogCommand__coll__graph.md5  classLogCommand__inherit__graph.md5  classMutexLock-members.html  classMutexLock.html  classWSServer-members.html  classWSServer.html  classadpc_1_1ClusterCurl-members.html  classadpc_1_1ClusterCurl.html  classadpc_1_1Config-members.html  classadpc_1_1Config.html  classadpc_1_1Log-members.html  classadpc_1_1Log.html  classadpc_1_1LogConfiguration-members.html  classadpc_1_1LogConfiguration.html  classadpc_1_1os-members.html  classadpc_1_1os.html  classadpctl_1_1Singleton-members.html  classadpctl_1_1Singleton.html  classes.html  classvincent__log_1_1log.html  classwscmd_1_1CommandFactory-members.html  classwscmd_1_1CommandFactory.html  classwscmd_1_1CommandFactory__coll__graph.map  classwscmd_1_1CommandFactory__coll__graph.md5  classwscmd_1_1ICommand-members.html  classwscmd_1_1ICommand.html  classwscmd_1_1ICommand__coll__graph.map  (+100 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_2.js  pages_4.js  searchdata.js
docs/latex/: annotated.tex  classCommandFactory.tex  classCommandFactory__coll__graph.md5  classICommand.tex  classICommand__inherit__graph.md5  classLogCommand.tex  classLogCommand__coll__graph.md5  classLogCommand__inherit__graph.md5  classMutexLock.tex  classWSServer.tex  classadpc_1_1ClusterCurl.tex  classadpc_1_1Config.tex  classadpc_1_1Log.tex  classadpc_1_1LogConfiguration.tex  classadpc_1_1os.tex  classadpctl_1_1Singleton.tex  classvincent__log_1_1log.tex  classwscmd_1_1CommandFactory.tex  classwscmd_1_1CommandFactory__coll__graph.md5  classwscmd_1_1ICommand.tex  classwscmd_1_1ICommand__coll__graph.md5  classwscmd_1_1ICommand__inherit__graph.md5  classwscmd_1_1LogCommand.tex  classwscmd_1_1LogCommand__coll__graph.md5  classwscmd_1_1LogCommand__inherit__graph.md5  common__define_8h.tex  common__define_8h__dep__incl.md5  common__define_8h__incl.md5  dir_2241064965c8d9ca993f08b926076f7d.tex  dir_2241064965c8d9ca993f08b926076f7d_dep.md5  dir_2d29d7dff7c7baf1180920f6796c23ae.tex  dir_5194e5fea318fda12687127c23f8aba1.tex  dir_5194e5fea318fda12687127c23f8aba1_dep.md5  dir_544efa7c1017874b72096b80e398ef01.tex  dir_66d682fcd9c2cc517223b1c38b0b09e6.tex  dir_66d682fcd9c2cc517223b1c38b0b09e6_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7e83d1792d529f4aa7126ac7e0b3b699.tex  dir_7e83d1792d529f4aa7126ac7e0b3b699_dep.md5  dir_fdedb0aba14d44ce9d99bc100e026e6a.tex  (+22 more)
src/: .vincent.ini  .vincent.yaml  CMakeLists.txt
src/adpctl/: singleton.h
src/app/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  adpc_string.cpp  adpc_string.h  adpc_string_test.cpp  common_define.h  os.cpp  os.h  os_test.cpp
src/config/: CMakeLists.txt  config.cpp  config.h  config_test.cpp
src/http/: CMakeLists.txt  clientinterface.cpp  clientinterface.h  clientinterface_test.cpp  config.ini  http.cpp  http.h  http_parser.h  http_test.cpp  manager_lock.cpp  manager_lock.h
src/http_parser/: CMakeLists.txt  http_parser_test.cpp  parserinterface.cpp  parserinterface.h
src/log/: CMakeLists.txt  log.cpp  log.h  log_config.h  log_test.cpp
src/proto/: CMakeLists.txt  cargo.pb.cc  cargo.pb.h  cargo.proto  proto_test.cpp
src/webservice_server/: CMakeLists.txt
src/webservice_server/.ngrest/: services
src/webservice_server/webservice_server/: CMakeLists.txt
src/webservice_server/webservice_server/src/: webservice_server.cpp  webservice_server.h
src/websocket_server/: CMakeLists.txt  cmd_factory.cpp  cmd_factory.h  command.cpp  command.h  log_cmd.cpp  log_cmd.h  websocket_server.cpp  websocket_server.h  websocket_server_test.cc
